--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link
+      rel="icon"
+      class="js-site-favicon"
+      type="image/svg+xml"
+      href="https://github.githubassets.com/favicons/favicon.svg"
+    />
     <link rel="stylesheet" href="./index.css" />
     <title>Countries</title>
   </head>
