--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,16 @@
     <title>Countries</title>
   </head>
   <body>
-    <h1 class="title">Enter the country name</h1>
+    <label class="title">Enter the country name</label>
     <input class="input" type="text" autofocus />
     <div class="country"></div>
     <ul class="list"></ul>
+    <img
+      class="baggage-img"
+      src="./images/baggage.png"
+      alt="Baggage"
+      width="200"
+    />
     <script src="./index.js"></script>
   </body>
 </html>
