--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <title>Countries</title>
   </head>
   <body>
-    <label class="title">Enter the country name</label>
+    <label class="title">Enter a country name</label>
     <input class="input" type="text" autofocus />
     <div class="country"></div>
     <ul class="list"></ul>
